compilateurDeca/src/test/deca/syntax/valid/objet/class_return.deca
// Description:
//   Paramètres de type classe + retour de type classe
// Resultats:
//    Succes
//
// Historique:
//    cree le 15/01/2026
class A { }
class B {
    A id(A a) { return a; }
}
{
}
